# stripper

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
test/assets/: 1
