[package]
name = "stripper"
license = "MIT"
description = "A tool to strip words from files very quickly."
version = "0.1.1"
edition = "2021"
exclude = [
    "test/*",
]

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
rpath = false

# See more keys and their at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
colored = "2"
walkdir = "2.4.0" 
